
[package]
name = "solana-helloworld-program"
version = "0.0.1"
description = "Example Solana on-chanin program in Rust"
authors = ["Arunoda Susiripala <arunoda@gdi4k.com>"]
repository = "https://github.com/foosimple/solana-helloworld-program"
license = "MIT"
homepage = "https://foosimple.com"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "my_program"
crate-type = ["cdylib", "lib"]
